added some ids to the form/submit element. added the test fetch API calls to a function, and added that funtion to event listener on the form/submit

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </header>
         <main class="d-flex" id="weatherContainer">
             <section class="mx-3" id="columnLeft">
-                <form>
-                    <input class="mb-1" type="text" value="Enter a city here">
+                <form id="submitForm">
+                    <input class="mb-1" id="cityText" type="text" value="Enter a city here">
                     <br>
                     <input type="submit">
                 </form>
