add current weather icon to page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <section class="mr-3" id="columnRight">
                 <section class="border border-3 rounded d-flex flex-column" id="currentWeather">
                     <h2>City name and date</h2>
+                    <img id="currentwxicon">
                     <div>Temp:</div>
                     <div>Wind:</div>
                     <div>Humidity:</div>
