changed a few bootstrap classes for better responsiveness

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </div>
             </nav>
         </header>
-        <main class="d-flex" id="weatherContainer">
-            <section class="mx-3" id="columnLeft">
+        <main class="container-fluid row" id="weatherContainer">
+            <section class="mx-3 col" id="columnLeft">
                 <form id="submitForm">
                     <input class="mb-1" id="cityText" type="text" value="Enter a city here">
                     <br>
@@ -33,7 +33,7 @@
                     Past searches appear here
                 </section>
             </section>
-            <section class="mr-3" id="columnRight">
+            <section class="mr-3 col" id="columnRight">
                 <section class="border border-3 rounded d-flex flex-column" id="currentWeather">
                     <h2>City name and date</h2>
                     <img id="currentwxicon">
