several media queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </nav>
         </header>
         <main class="container-fluid row" id="weatherContainer">
-            <section class="mx-3 col" id="columnLeft">
+            <section class="mx-3 col-2" id="columnLeft">
                 <form id="submitForm">
                     <input class="mb-1" id="cityText" type="text" value="Enter a city here">
                     <br>
