attempting to add some responsiveness to past searches

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="submit">
                 </form>
                 <hr>
-                <section id="pastSearches">
+                <section class="container-fluid row d-flex" id="pastSearches">
                     Past searches appear here
                 </section>
             </section>
